--- a/styles/constructionpage.module.scss
+++ b/styles/constructionpage.module.scss
@@ -1,5 +1,5 @@
 .body {
-    background-image: url('../public/background.jpg');
+    background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639074875/buffalobilliardclub/website_data/background_c7bjsd.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
