--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,6 +4,8 @@
     align-items: center;
     padding: 30px 0;
     background: linear-gradient(0deg, rgba(255,251,244,0) 0%, #fffbf4 100%);
+    z-index: 200;
+    position: relative;
 }
 
 .image {
