--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -2,6 +2,25 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    min-width: 150px;
+    @media (max-width: 590px) {
+        position: absolute;
+        top: 120px;
+        left: 0;
+        gap: 15px;
+        width: 100vw;
+        background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
+        height: calc(100% - 120px - 40px);
+        transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
+        z-index: 100;
+        transform: translate(0, calc(-100% - 120px));
+        z-index: -1;
+        &_open {
+            transform: translate(0, 0);
+            z-index: 10;
+        }
+        overflow-y: scroll;
+    }
 }
 
 .nav__link {
@@ -12,4 +31,43 @@
     &_active {
         color: #f3a33b;
     }
+    @media (max-width: 590px) {
+        text-align: center;
+        font-size: 18px;
+    }
+}
+
+.menu__toggle {
+    width: 40px;
+    transform: rotate(180deg);
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
+}
+
+.menu__toggle_holder {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, -55px);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.05);
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
+    z-index: 300;
+    @media(min-width: 591px) {
+        display: none;
+    }
+}
+
+.menu__toggle_open {
+    transform: rotate(0);
+}
+
+.menu__toggle_holder_open {
+    position: fixed;
+    z-index: 300;
+    left: 50%;
+    transform: translate(-50%, calc(100vh - 195px));
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
