--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -53,8 +53,9 @@
     background-color: rgba(0,0,0,0.05);
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
     z-index: 300;
-    @media(min-width: 591px) {
-        display: none;
+    display: none;
+    @media(max-width: 590px) {
+        display: block;
     }
 }
 
