--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -9,16 +9,22 @@
 }
 
 .image {
-    width: 115px;
+    width: 140px;
+    @media(max-width: 590px) {
+        width: 115px;
+    }
 }
 
 .nav__link {
     cursor: pointer;
-    font-size: 17px;
+    font-size: 20px;
     font-family: 'Oswald', sans-serif;
     text-decoration: none;
     color: #000;
     &_active {
         color: #78303e;
+    }
+    @media(max-width:590px) {
+        font-size: 17px;
     }
 }
