--- a/components/MenuContentItem/MenuContentItem.module.scss
+++ b/components/MenuContentItem/MenuContentItem.module.scss
@@ -23,19 +23,22 @@
     &_uk {
         font-family: 'Oswald', sans-serif;
         font-weight: 500;
+        font-size: 18px;
         @media(max-width: 590px) {
             text-align: center;
             max-width: 270px;
+            font-size: 16px;
         }
     }
     &_en {
         font-family: 'PT Serif', serif;
         font-style: italic;
-        font-size: 14px;
+        font-size: 16px;
         color: rgba(0,0,0,0.7);
         @media(max-width: 590px) {
             text-align: center;
             max-width: 270px;
+            font-size: 14px;
         }
     }
     
@@ -44,8 +47,12 @@
 .position__price {
     font-family: 'PT Serif', serif;
     font-style: italic;
+    font-size: 18px;
     min-width: 100px;
     text-align: center;
+    @media (max-width: 590px) {
+        font-size: 16px;
+    }
 }
 
 
