--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -12,7 +12,6 @@
         background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
         height: calc(100% - 120px - 40px);
         transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
-        z-index: 100;
         transform: translate(0, calc(-100% - 120px));
         z-index: -1;
         &_open {
@@ -20,6 +19,11 @@
             z-index: 10;
         }
         overflow-y: scroll;
+        -ms-overflow-style: none;   
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
 
