--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,15 +1,16 @@
+@import "../../styles/vars";
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 0;
     z-index: 200;
-    position: relative;
 }
 
 .image {
     width: 140px;
-    @media(max-width: 590px) {
+    @media(max-width: $media_barrier) {
         width: 115px;
     }
 }
@@ -17,13 +18,13 @@
 .nav__link {
     cursor: pointer;
     font-size: 20px;
-    font-family: 'Oswald', sans-serif;
+    font-family: $main_font;
     text-decoration: none;
     color: #000;
     &_active {
         color: #78303e;
     }
-    @media(max-width:590px) {
+    @media(max-width: $media_barrier) {
         font-size: 17px;
     }
 }
