--- a/components/MenuContent/MenuContent.module.scss
+++ b/components/MenuContent/MenuContent.module.scss
@@ -1,10 +1,12 @@
+@import "../../styles/vars";
+
 .content {
     max-width: 1000px;
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    @media (max-width: 590px) {
+    @media (max-width: $media_barrier) {
         gap: 24px;
     }
 }
