--- a/components/MenuContentItem/MenuContentItem.module.scss
+++ b/components/MenuContentItem/MenuContentItem.module.scss
@@ -1,9 +1,11 @@
+@import "../../styles/vars";
+
 .menu__position {
     display: flex;
     justify-content: space-between;
     width: 100%;
     gap: 40px;
-    @media(max-width: 590px) {
+    @media(max-width: $media_barrier) {
         flex-direction: column;
         gap: 8px;
         justify-content: center;
@@ -15,27 +17,27 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
-        @media(max-width: 590px) {
+        @media(max-width: $media_barrier) {
             gap: 5px;
             align-items: center;
         }
     }
     &_uk {
-        font-family: 'Oswald', sans-serif;
+        font-family: $main_font;
         font-weight: 500;
         font-size: 18px;
-        @media(max-width: 590px) {
+        @media(max-width: $media_barrier) {
             text-align: center;
             max-width: 270px;
             font-size: 16px;
         }
     }
     &_en {
-        font-family: 'PT Serif', serif;
+        font-family: $secondary_font;
         font-style: italic;
         font-size: 16px;
         color: rgba(0,0,0,0.7);
-        @media(max-width: 590px) {
+        @media(max-width: $media_barrier) {
             text-align: center;
             max-width: 270px;
             font-size: 14px;
@@ -45,13 +47,14 @@
 }
 
 .position__price {
-    font-family: 'PT Serif', serif;
+    font-family: $secondary_font;
     font-style: italic;
     font-size: 18px;
     min-width: 100px;
-    text-align: center;
-    @media (max-width: 590px) {
+    text-align: right;
+    @media (max-width: $media_barrier) {
         font-size: 16px;
+        text-align: center;
     }
 }
 
