--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -1,21 +1,23 @@
+@import "../../styles/vars";
+
 .menu__nav {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    min-width: 150px;
-    @media (max-width: 590px) {
-        position: absolute;
+    min-width: 180px;
+    @media (max-width: $media_barrier) {
+        position: fixed;
         top: 120px;
         left: 0;
         gap: 15px;
         width: 100vw;
         background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
-        height: calc(100% - 120px - 40px);
+        height: calc(100% - 40px);
         transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
         transform: translate(0, calc(-100% - 120px));
         z-index: -1;
         &_open {
-            transform: translate(0, 0);
+            transform: translate(0, -120px);
             z-index: 10;
         }
         overflow-y: scroll;
@@ -28,14 +30,14 @@
 }
 
 .nav__link {
-    font-family: 'Oswald', sans-serif;
+    font-family: $main_font;
     font-size: 18px;
     cursor: pointer;
     text-transform: capitalize;
     &_active {
         color: #f3a33b;
     }
-    @media (max-width: 590px) {
+    @media (max-width: $media_barrier) {
         text-align: center;
         font-size: 18px;
     }
@@ -57,7 +59,7 @@
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
     z-index: 300;
     display: none;
-    @media(max-width: 590px) {
+    @media(max-width: $media_barrier) {
         display: flex;
     }
 }
@@ -74,4 +76,39 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    background-color: #fef5e6;
+}
+
+.header {
+    width: 100%;
+    padding: 30px 0;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    @media(max-width: $media_barrier) {
+        display: flex;
+    }
+}
+
+.image {
+    width: 115px;
+}
+
+.type__toggler {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.type__button {
+    text-align: center;
+    width: 100%;
+    padding: 8px;
+    cursor: pointer;
+    font-family: $main_font;
+    font-weight: 500;
+    text-transform: capitalize;
+    background-color: rgba(0,0,0,0.04);
+    &_active {
+        background-color: rgba(0,0,0,0.10);
+    }
 }
