--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -76,7 +76,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: #fef5e6;
+    background-color: #f2ebe2;
 }
 
 .header {
