--- a/components/MenuContentItem/MenuContentItem.module.scss
+++ b/components/MenuContentItem/MenuContentItem.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 40px;
-    @media(max-width: $media_barrier) {
+    @media(max-width: 500px) {
         flex-direction: column;
         gap: 8px;
         justify-content: center;
@@ -17,7 +17,7 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
-        @media(max-width: $media_barrier) {
+        @media(max-width: 500px) {
             gap: 5px;
             align-items: center;
         }
@@ -27,9 +27,11 @@
         font-weight: 500;
         font-size: 18px;
         @media(max-width: $media_barrier) {
+            font-size: 16px;
+        }
+        @media(max-width: 500px) {
             text-align: center;
             max-width: 270px;
-            font-size: 16px;
         }
     }
     &_en {
@@ -38,6 +40,9 @@
         font-size: 16px;
         color: rgba(0,0,0,0.7);
         @media(max-width: $media_barrier) {
+            font-size: 14px;
+        }
+        @media(max-width: 500px) {
             text-align: center;
             max-width: 270px;
             font-size: 14px;
