--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -3,6 +3,7 @@
 .menu__nav {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
     gap: 8px;
     padding-bottom: 8px;
     min-width: 180px;
@@ -11,7 +12,7 @@
         top: 120px;
         left: 0;
         gap: 15px;
-        padding-bottom: 8px;
+        padding-bottom: 15px;
         width: 100vw;
         background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
         height: calc(100% - 40px);
