--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,3 +1,5 @@
 $main_font: 'Oswald', sans-serif;
 $secondary_font: 'PT Serif', serif;
 $media_barrier: 700px;
+$main_font_color: rgba(255,255,255,0.85);
+$secondary_font_color: rgba(255,255,255,0.6)
