--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/vars";
 
 .menu__nav {
+    position: relative;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -10,12 +11,13 @@
     @media (max-width: $media_barrier) {
         position: fixed;
         top: 120px;
+        z-index: 20;
         left: 0;
         gap: 15px;
-        padding-bottom: 15px;
+        padding-bottom: 59px;
         width: 100vw;
-        background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
-        height: calc(100% - 40px);
+        background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1640020566/buffalobilliardclub/website_data/719d00bf27cfaccbce7d8fab9e916acd_a8unnw.jpg');
+        height: calc(100%);
         transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
         transform: translate(0, calc(-100% - 120px));
         z-index: -1;
@@ -37,6 +39,7 @@
     font-size: 18px;
     cursor: pointer;
     text-transform: capitalize;
+    color: $main_font_color;
     &_active {
         color: #f3a33b;
     }
@@ -58,13 +61,17 @@
     transform: translate(-50%, -55px);
     width: 100%;
     justify-content: center;
-    background-color: rgba(0,0,0,0.05);
+    background-color: rgba(255,255,255,0.1);
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
-    z-index: 300;
+    z-index: 10;
     display: none;
     @media(max-width: $media_barrier) {
         display: flex;
     }
+}
+
+.hidden {
+    display: none;
 }
 
 .menu__toggle_open {
@@ -72,19 +79,25 @@
 }
 
 .menu__toggle_holder_open {
-    position: fixed;
-    z-index: 300;
+    position: absolute;
     left: 50%;
-    transform: translate(-50%, calc(100vh - 195px));
+    bottom: 5px;
+    transform: translate(-50%, 0);
     width: 100%;
-    display: flex;
     justify-content: center;
-    background-color: #f2ebe2;
+    background-color: rgba(255,255,255,0.1);
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
+    z-index: 10;
+    display: none;
+    @media(max-width: $media_barrier) {
+        display: flex;
+    }
 }
 
 .header {
+    position: relative;
     width: 100%;
-    padding: 30px 0;
+    padding: 30px 0 70px;
     justify-content: center;
     align-items: center;
     display: none;
@@ -110,8 +123,9 @@
     font-family: $main_font;
     font-weight: 500;
     text-transform: capitalize;
-    background-color: rgba(0,0,0,0.04);
+    color: rgba(0,0,0,0.9);
+    background-color: rgba(255,255,255,0.1);
     &_active {
-        background-color: rgba(0,0,0,0.10);
+        background-color: rgba(255,255,255,0.35);
     }
 }
