--- a/styles/Menupage.module.scss
+++ b/styles/Menupage.module.scss
@@ -2,10 +2,17 @@
 
 .page {
     min-height: 100vh;
-    background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1639407562/buffalobilliardclub/website_data/99746textured_omxdbw.png');
+    background-image: url('https://res.cloudinary.com/yalukaiwo/image/upload/v1640020566/buffalobilliardclub/website_data/719d00bf27cfaccbce7d8fab9e916acd_a8unnw.jpg');
     background-size: cover;
     padding-bottom: 50px;
     box-sizing: border-box;
+    @media(max-width: $media_barrier) {
+        -ms-overflow-style: none;   
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+    }
 }
 
 .container {
@@ -31,7 +38,7 @@
     position: fixed;
     right: 20px;
     bottom: 20px;
-    background-color: rgba(0,0,0,0.05);
+    background-color: rgba(255,255,255,0.5);
     display: none;
     @media(max-width: $media_barrier) {
         display: flex;
