--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -51,7 +51,7 @@
 
 .menu__toggle {
     width: 40px;
-    transform: rotate(180deg);
+    transform: rotate(0);
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
 }
 
@@ -75,7 +75,7 @@
 }
 
 .menu__toggle_open {
-    transform: rotate(0);
+    transform: rotate(180deg);
 }
 
 .menu__toggle_holder_open {
@@ -99,7 +99,7 @@
     position: relative;
     width: 100%;
     padding: 30px 0 70px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     display: none;
     @media(max-width: $media_barrier) {
@@ -107,8 +107,16 @@
     }
 }
 
+.shedule {
+    padding-right: 30px;
+    font-family: 'Oswald', sans-serif;
+    color: #ed4653;
+    font-weight: normal;
+}
+
 .image {
     width: 90px;
+    padding-left: 30px;
 }
 
 .type__toggler {
