--- a/components/MenuNav/MenuNav.module.scss
+++ b/components/MenuNav/MenuNav.module.scss
@@ -110,7 +110,7 @@
 .shedule {
     padding-right: 30px;
     font-family: 'Oswald', sans-serif;
-    color: #ed4653;
+    color: $main_font_color;
     font-weight: normal;
 }
 
